<resources>
    <string name="app_name">VF</string>


    <!--    for bottom navigation use-->
    <string name="bottom_nav1">DATA</string>
    <string name="bottom_nav2">SCHEDULE</string>
    <string name="bottom_nav3">CAMERA</string>
    <string name="bottom_nav4">CONTROL</string>
    <string name="bottom_nav5">ALERT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>